Fixed button hover issue and content spacing issue

--- a/less/index.less
+++ b/less/index.less
@@ -136,12 +136,13 @@ html, body {
 		font-size: 1.8rem;
 	  }
 	  
-	  .first-anchor {
-		margin-left: 0;
-	  }
-	}// nav
+	}
   } 
-  
+  .intro {
+    display: flex;
+    justify-content:center;
+}
+
   .main-content {
 	display: flex;
 	flex-wrap: wrap;
@@ -151,37 +152,33 @@ html, body {
 	  flex-direction: column;
 
 	} 
-	.top-content{
+	.experience{
 		  border:1px solid black;
 		  border-radius: 5px;
 		  background-color: @grey;
 		  margin: 20px 2.5%;
-    	  width: 45%;
+    	  width: 100%;
 	  }
-	  .bottom-content{
+	  .skills{
 		  border:1px solid black;
 		  border-radius: 5px;
 		  background-color: @grey;
 		  margin: 20px 2.5%;
-          width: 45%;
+          width: 100%;
 	  }
   }
   
-.intro {
-display: flex;
-justify-content:center;
-}
 	 
   
 .nav-btn {
-	background-color: #f4511e;
+	background-color: green;
 	border-radius: 15px;
 	color: white;
 	width: 100px;
-	font-size: 3rem;
+	font-size: 2rem;
 	margin:  0 10px 20px;
 	opacity: 0.6;
-	transition: 0.5s;
+	transition: 0.6s;
 	text-decoration: none;
 	cursor: pointer;
   }
@@ -198,4 +195,4 @@ justify-content:center;
 	  color: white;
   
 	}
-  }
+  
